Changed all hook_ctools_plugin_directory() implementations to use the more informative variable naming scheme.
#817612 by elstudio: Fix validation error that was making it impossible to add 'Existing node' content_types.
#787644 by Amitaibu and merlinofchaos: Introduce export-ui and auto-submit. See API.txt for more.
Update the plugin system documentation, and clean up plugin system logic.

ctools 6.x-1.6 (2010-June-1)
==============
(No changes - 1.5 release was improperly tagged)

ctools 6.x-1.5 (2010-May-28)
==============
#804198: CTools AJAX framework did not work properly with javascript aggregation.
Handle forms passing through required contexts properly.
Add operation alter tooks to let modules add items to Page Manager pages.
Partial rollback of #711664 - central-hook-based plugin definition no longer defaults to FALSE, as this caused widespread unexpected behavior in modules using ctools plugins.
#708926: Remove dependency-busting call to panels_get_path().
Do not allow Views Content Pane displays to be selected by the legacy Views content connector; based on #791960.
#737434 by nealeyoung: Make the node_updated content_type plugin actually do what it advertises and output last change time.

ctools 6.x-1.4 (2010-May-19)
==============
#686764: Update page tokens to use actual page rendering mechanism rather than the tokens which causes them to appear as having content even when empty.
Retool the page elements to render last and not use the token method.
Allow themes to provide default pages so that Panels Everywhere enabled themes can provide layout variants for the site template.
Initial inclusion of the stylizer plugin to create user customizable styles from pre-configured base styles.
#708154: Update and Save would leave forms in an older state, causing some forms to lose data (particularly the Panels content form).
#467948 by hefox: Allow the vocabulary context to be used by the vocabulary selector access plugin.