@@ -15,27 +15,139 @@
  * by the system that includes this file.
  */
 $plugin = array(
-  'single' => TRUE,
   'no title override' => TRUE,
-  'title' => t('New custom content'),
-  'icon' => 'icon_block_custom.png',
-  'description' => t('Create a completely custom piece of HTML content.'),
-  // Make this a top level category so it appears higher in UIs that support
-  // that.
-  'top level' => TRUE,
-  'category' => t('Custom'),
   'defaults' => array('admin_title' => '', 'title' => '', 'body' => '', 'format' => FILTER_FORMAT_DEFAULT, 'substitute' => TRUE),
-  // render callback is automatically deduced:
-  // 'render callback' => 'ctools_custom_content_type_render',
   'js' => array('misc/autocomplete.js', 'misc/textarea.js', 'misc/collapse.js'),
-  'all contexts' => TRUE,
+  // Make sure the edit form is only used for some subtypes.
+  'edit form' => '',
+  'add form' => '',
 );
+
+/**
+ * Return the custom content types with the specified $subtype_id.
+ */
+function ctools_custom_content_type_content_type($subtype_id) {
+  if ($subtype_id == 'custom') {
+    return _ctools_default_content_type_content_type();
+  }
+  else {
+    ctools_include('export');
+    $content = ctools_export_crud_load('ctools_custom_content', $subtype_id);
+    if ($content) {
+      return _ctools_custom_content_type_content_type($content);
+    }
+  }
+}
+
+/**
+ * Return all custom content types available.
+ */
+function ctools_custom_content_type_content_types() {
+  ctools_include('export');
+  $types = array();
+  $types['custom'] = _ctools_default_content_type_content_type();
+
+  foreach (ctools_export_crud_load_all('ctools_custom_content') as $name => $content) {
+    $types[$name] = _ctools_custom_content_type_content_type($content);
+  }
+  return $types;
+}
+
+/**
+ * Settings for the default custom content type.
+ *
+ * The default is the one that allows the user to actually create a type.
+ */
+function _ctools_default_content_type_content_type() {
+  $info = array(
+    'name' => 'custom',
+    'title' => t('New custom content'),
+    'top level' => TRUE,
+    'category' => t('Custom'),
+    'description' => t('Create a completely custom piece of HTML content.'),
+    'edit form' => 'ctools_custom_content_type_edit_form',
+  );
+
+  return $info;
+}
+
+/**
+ * Return an info array for a specific custom content type.
+ */
+function _ctools_custom_content_type_content_type($content) {
+  $info = array(
+    'name' => $content->name,
+    'title' => check_plain($content->admin_title),
+    'description' => check_plain($content->admin_description),
+    'category' => $content->category ? check_plain($content->category) : t('Miscellaneous'),
+    'all contexts' => TRUE,
+    'icon' => 'icon_block_custom.png',
+    // Store this here to make it easy to access.
+    'content' => $content,
+  );
+
+  return $info;
+}
+
+/**
+ * Given a subtype and a $conf, return the actual settings to use.
+ *
+ * The actual settings may be stored directly in the pane or this may
+ * be a pointer to re-usable content that may be in the database or in
+ * an export. We have to determine from the subtype whether or not it
+ * is local or shared custom content.
+ */
+function ctools_custom_content_type_get_conf($subtype, $conf) {
+  if ($subtype['name'] != 'custom') {
+    $settings = $subtype['content']->settings;
+    $settings['custom_type'] = 'fixed';
+    $settings['content'] = $subtype['content'];
+  }
+  else {
+    // This means they created it as custom content and then set it as
+    // reusable. Since we're not allowed to change the subtype, we're
+    // still stored as though we are local, but are pointing off to
+    // non-local.
+    if (!empty($conf['name'])) {
+      ctools_include('export');
+      $content = ctools_export_crud_load('ctools_custom_content', $conf['name']);
+      if ($content) {
+        $settings = $content->settings;
+        $settings['custom_type'] = 'fixed';
+        $settings['content'] = $content;
+      }
+      else {
+        $content = ctools_export_crud_new('ctools_custom_content');
+        $content->name = $conf['name'];
+        $settings = array(
+          'admin_title' => t('Missing/deleted content'),
+          'title' => '',
+          'body' => '',
+          'format' => FILTER_FORMAT_DEFAULT,
+          'substitute' => TRUE,
+          'custom_type' => 'fixed',
+          'content' => $content,
+        );
+      }
+    }
+    // This means that it is created as custom and has not been set to
+    // reusable.
+    else {
+      $settings = $conf;
+      $settings['custom_type'] = 'local';
+    }
+  }
+
+  return $settings;
+}
 
 /**
  * Output function for the 'custom' content type. Outputs a custom
  * based on the module and delta supplied in the configuration.
  */
 function ctools_custom_content_type_render($subtype, $conf, $args, $contexts) {
+  $settings = ctools_custom_content_type_get_conf($subtype, $conf);
+
   static $delta = 0;
 
   $block          = new stdClass();
@@ -56,11 +168,19 @@ function ctools_custom_content_type_render($subtype, $conf, $args, $contexts) {
  * Callback to provide the administrative title of the custom content.
  */
 function ctools_custom_content_type_admin_title($subtype, $conf) {
+  $settings = ctools_custom_content_type_get_conf(ctools_custom_content_type_content_type($subtype), $conf);
+
   $output = t('Custom');
-  $title = !empty($conf['admin_title']) ? $conf['admin_title'] : $conf['title'];
+  $title = !empty($settings['admin_title']) ? $settings['admin_title'] : $settings['title'];
   if ($title) {
-    $output = t('Custom: @title', array('@title' => $title));
+    if ($settings['custom_type'] != 'fixed') {
+      $output = t('Custom: @title', array('@title' => $title));
+    }
+    else {
+      $output = $title;
+    }
   }
+
   return $output;
 }
 
@@ -69,14 +189,16 @@ function ctools_custom_content_type_admin_title($subtype, $conf) {
  * content as long as it's not PHP, which is too risky to render here.
  */
 function ctools_custom_content_type_admin_info($subtype, $conf) {
+  $settings = ctools_custom_content_type_get_conf(ctools_custom_content_type_content_type($subtype), $conf);
+
   $block = new stdClass();
-  $block->title = filter_xss_admin($conf['title']);
+  $block->title = filter_xss_admin($settings['title']);
   // We don't want to render php output on preview here, because if something is
   // wrong the whole display will be borked. So we check to see if the php
   // evaluator filter is being used, and make a temporary change to the filter
   // so that we get the printed php, not the eval'ed php.
   $php_filter = FALSE;
-  foreach (filter_list_format($conf['format']) as $filter) {
+  foreach (filter_list_format($settings['format']) as $filter) {
     if ($filter->module == 'php') {
       $php_filter = TRUE;
       break;
@@ -85,13 +207,15 @@ function ctools_custom_content_type_admin_info($subtype, $conf) {
   // If a php filter is active, just print the source, but only if the current
   // user has access to the actual filter.
   if ($php_filter) {
-    if (!filter_access($conf['format'])) {
+    if (!filter_access($settings['format'])) {
       return NULL;
     }
-    $block->content = '<pre>'. check_plain($conf['body']) .'</pre>';
+    $block->content = '<pre>'. check_plain($settings['body']) .'</pre>';
   }
   else {
-    $block->content = check_markup($conf['body'], $conf['format']);
+    // We also need to filter through XSS admin because <script> tags can
+    // cause javascript which will interfere with our ajax.
+    $block->content = filter_xss_admin(check_markup($settings['body'], $settings['format']));
   }
   return $block;
 }
@@ -100,34 +224,40 @@ function ctools_custom_content_type_admin_info($subtype, $conf) {
  * Returns an edit form for the custom type.
  */
 function ctools_custom_content_type_edit_form(&$form, &$form_state) {
-  $conf = $form_state['conf'];
+  $settings = ctools_custom_content_type_get_conf($form_state['subtype'], $form_state['conf']);
+  $form_state['settings'] = $settings;
+
+  if ($settings['custom_type'] == 'fixed') {
+    return; // no form for this case.
+  }
+
   $form['admin_title'] = array(
     '#type' => 'textfield',
-    '#default_value' => isset($conf['admin_title']) ? $conf['admin_title'] : '',
+    '#default_value' => isset($settings['admin_title']) ? $settings['admin_title'] : '',
     '#title' => t('Administrative title'),
     '#description' => t('This title will be used administratively to identify this pane. If blank, the regular title will be used.'),
   );
 
   $form['title'] = array(
     '#type' => 'textfield',
-    '#default_value' => $conf['title'],
+    '#default_value' => $settings['title'],
     '#title' => t('Title'),
   );
 
   $form['body_field']['body'] = array(
     '#title' => t('Body'),
     '#type' => 'textarea',
-    '#default_value' => $conf['body'],
+    '#default_value' => $settings['body'],
   );
   $parents[] = 'format';
-  $form['body_field']['format'] = filter_form($conf['format'], 1, $parents);
+  $form['body_field']['format'] = filter_form($settings['format'], 1, $parents);
 
   if (!empty($form_state['contexts'])) {
     $form['substitute'] = array(
       '#type' => 'checkbox',
       '#title' => t('Use context keywords'),
       '#description' => t('If checked, context keywords will be substituted in this content.'),
-      '#default_value' => !empty($conf['substitute']),
+      '#default_value' => !empty($settings['substitute']),
     );
     $form['contexts'] = array(
       '#title' => t('Substitutions'),
@@ -149,16 +279,101 @@ function ctools_custom_content_type_edit_form(&$form, &$form_state) {
     $form['contexts']['context'] = array('#value' => theme('table', $header, $rows));
   }
 
-  return $form;
+  if (!user_access('administer custom content')) {
+    return;
+  }
+
+  // Make the other form items dependent upon it.
+  ctools_include('dependent');
+
+  $form['reusable'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Make this content reusable'),
+    '#default_value' => FALSE,
+  );
+
+  $form['name'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Machine name'),
+    '#description' => t('The machine readable name of this page. It must be unique, and it must contain only alphanumeric characters and underscores. Once created, you will not be able to change this value!'),
+    '#process' => array('ctools_dependent_process'),
+    '#dependency' => array('edit-reusable' => array(1)),
+  );
+
+  $form['category'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Category'),
+    '#description' => t('What category this content should appear in. If left blank the category will be "Miscellaneous".'),
+    '#process' => array('ctools_dependent_process'),
+    '#dependency' => array('edit-reusable' => array(1)),
+  );
+
+  $form['admin_description'] = array(
+    '#type' => 'textarea',
+    '#title' => t('Administrative description'),
+    '#description' => t('A description of what this style is, does or is for, for administrative use.'),
+    '#process' => array('ctools_dependent_process'),
+    '#dependency' => array('edit-reusable' => array(1)),
+  );
+}
+
+function _ctools_custom_content_type_edit_save(&$content, $form_state) {
+  // Apply updates to the content object.
+  $content->category = $form_state['values']['category'];
+  $content->admin_title = $form_state['values']['admin_title'];
+  $content->admin_description = $form_state['values']['admin_description'];
+  foreach (array_keys($form_state['plugin']['defaults']) as $key) {
+    if (isset($form_state['values'][$key])) {
+      $content->settings[$key] = $form_state['values'][$key];
+    }
+  }
+
+  ctools_export_crud_save('ctools_custom_content', $content);
+}
+
+/**
+ * The validate form to ensure the custom content data is okay.
+ */
+function ctools_custom_content_type_edit_form_validate(&$form, &$form_state) {
+  if ($form_state['settings']['custom_type'] != 'fixed' && !empty($form_state['values']['reusable'])) {
+    if (empty($form_state['values']['name'])) {
+      form_error($form['name'], t('Name is required.'));
+    }
+
+    // Check for string identifier sanity
+    if (!preg_match('!^[a-z0-9_]+$!', $form_state['values']['name'])) {
+      form_error($form['name'], t('The name can only consist of lowercase letters, underscores, and numbers.'));
+      return;
+    }
+
+    // Check for name collision
+    if ($form_state['values']['name'] == 'custom' || (ctools_export_crud_load('ctools_custom_content', $form_state['values']['name']))) {
+      form_error($form['name'], t('Content with this name already exists. Please choose another name or delete the existing item before creating a new one.'));
+    }
+  }
 }
 
 /**
  * The submit form stores the data in $conf.
  */
 function ctools_custom_content_type_edit_form_submit(&$form, &$form_state) {
-  foreach (array_keys($form_state['plugin']['defaults']) as $key) {
-    if (isset($form_state['values'][$key])) {
-      $form_state['conf'][$key] = $form_state['values'][$key];
+  if ($form_state['settings']['custom_type'] == 'fixed') {
+    _ctools_custom_content_type_edit_save($form_state['settings']['content'], $form_state);
+  }
+  // If the 'reusable' checkbox was checked, we will create a new
+  // custom content and give it the proper values.
+  else if (!empty($form_state['values']['reusable'])) {
+    $content = ctools_export_crud_new('ctools_custom_content');
+    $content->name = $form_state['values']['name'];
+    _ctools_custom_content_type_edit_save($content, $form_state);
+    $form_state['conf']['name'] = $content->name;
+  }
+  else {
+    // Otherwise, just save values into $conf normally.
+    foreach (array_keys($form_state['plugin']['defaults']) as $key) {
+      if (isset($form_state['values'][$key])) {
+        $form_state['conf'][$key] = $form_state['values'][$key];
+      }
     }
   }
 }
